--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ecommerce",
     "api",
     "nestjs",
-    "express"
+    "express",
+    "prisma"
   ],
   "author": "Nick Kosarev <hmbanan666@hotmail.com>",
   "license": "MIT",
@@ -32,6 +33,7 @@
     "@nestjs/common": "10.2.7",
     "@nestjs/core": "10.2.7",
     "@nestjs/platform-express": "10.2.7",
+    "@prisma/client": "^5.4.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "reflect-metadata": "0.1.13",
@@ -52,6 +54,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "5.4.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
