--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "@nestjs/core": "10.2.7",
     "@nestjs/platform-express": "10.2.7",
     "@prisma/client": "5.4.2",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.0",
+    "nestjs-zod": "3.0.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
