--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
+    "tsup": "^7.2.0",
     "typescript": "5.2.2"
   },
   "jest": {
