--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/common": "10.2.7",
     "@nestjs/core": "10.2.7",
     "@nestjs/platform-express": "10.2.7",
+    "@paralleldrive/cuid2": "2.2.2",
     "@prisma/client": "5.4.2",
     "nestjs-zod": "3.0.0",
     "reflect-metadata": "0.1.13",
