--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
   },
   "homepage": "https://github.com/next-orders/api#readme",
   "dependencies": {
-    "@dicebear/open-peeps": "^7.0.1",
     "@dicebear/core": "^7.0.1",
+    "@dicebear/open-peeps": "^7.0.1",
     "@nestjs/common": "10.2.7",
     "@nestjs/core": "10.2.7",
+    "@nestjs/jwt": "10.1.1",
     "@nestjs/platform-express": "10.2.7",
     "@paralleldrive/cuid2": "2.2.2",
     "@prisma/client": "5.5.0",
