--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/platform-express": "10.2.7",
     "@paralleldrive/cuid2": "2.2.2",
     "@prisma/client": "5.5.2",
+    "bcrypt": "5.1.1",
     "nestjs-zod": "3.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
@@ -51,6 +52,7 @@
     "@nestjs/cli": "^10.2.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.9",
