--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 DATABASE_URL=
 JWT_SECRET=
+JWT_EXPIRATION_TIME=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_REGION=
+AWS_S3_BUCKET_NAME=
+CUSTOM_S3_ENDPOINT=
 
 DEMO_AUTH_EMAIL=
 DEMO_AUTH_PASS=
