--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
   },
   "homepage": "https://github.com/next-orders/api#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "3.440.0",
     "@dicebear/core": "7.0.1",
     "@dicebear/open-peeps": "7.0.1",
     "@nestjs/common": "10.2.7",
+    "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.7",
     "@nestjs/jwt": "10.1.1",
     "@nestjs/platform-express": "10.2.7",
@@ -55,6 +57,7 @@
     "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.7",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.8.10",
     "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
