s3 storage: on file upload checking possible extension, sharp make best image (jpg, max 1200px width) for static serve in future

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nestjs-zod": "3.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
+    "sharp": "0.32.6",
     "zod": "3.22.4"
   },
   "devDependencies": {
