--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-API_URL=
+API_URL= # URL of this Main API
 
-DATABASE_URL=
+DATABASE_URL= # PostgreSQL connection URL for Prisma
 
-JWT_SECRET=
-JWT_EXPIRATION_TIME=
+JWT_SECRET= # Secret string
+JWT_EXPIRATION_TIME= # Example, "30d"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_S3_REGION=
-AWS_S3_BUCKET_NAME=
-CUSTOM_S3_ENDPOINT=
+AWS_ACCESS_KEY_ID= # S3 Config
+AWS_SECRET_ACCESS_KEY= # S3 Config
+AWS_S3_REGION= # S3 Config
+AWS_S3_BUCKET_NAME= # S3 Config
+CUSTOM_S3_ENDPOINT= # Optional
 
-DEMO_AUTH_EMAIL=
-DEMO_AUTH_PASS=
+DEMO_AUTH_EMAIL= # Optional, used on Command Center Login Page
+DEMO_AUTH_PASS= # Optional, used on Command Center Login Page
