--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,10 @@
 version: 2
 updates:
   - package-ecosystem: "npm"
+    directory: "/sdk"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "daily"
