--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Frontend needs data from backend: categories, products, checkouts, etc.",
   "scripts": {
     "build": "nest build",
@@ -11,6 +11,7 @@
     "start:prod": "node dist/main",
     "prisma:push": "prisma db push",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:types": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
