Edit Employee and Channel controllers and services

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 API_URL= # URL of this Main API
-
-DATABASE_URL= # PostgreSQL connection URL for Prisma
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/food?schema=public" # PostgreSQL connection URL for Prisma
 
 JWT_SECRET= # Secret string
 JWT_EXPIRATION_TIME= # Example, "30d"
