Add employee permissions creating, e2e now looking good

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config test/jest-e2e.json --detectOpenHandles",
+    "test:e2e": "jest --config test/jest-e2e.json --detectOpenHandles --silent false",
     "dev:db": "docker-compose up -d",
     "prisma:push": "prisma db push",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:reset": "prisma migrate reset"
   },
   "keywords": [
     "ecommerce",
